// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card: block card with multiple datasources on resize should change the layout of only the selected table-first-table-layout-full-width 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "full-width",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "center",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;

exports[`card: block card with multiple datasources on resize should change the layout of only the selected table-first-table-layout-wide 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "wide",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "center",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;

exports[`card: block card with multiple datasources on resize should change the layout of only the selected table-initial-state 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "center",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "center",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;

exports[`card: block card with multiple datasources on resize should change the layout of only the selected table-second-table-layout-full width 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "full-width",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "full-width",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;

exports[`card: block card with multiple datasources on resize should change the layout of only the selected table-second-table-layout-wide 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "full-width",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
    Object {
      "attrs": Object {
        "data": null,
        "datasource": Object {
          "id": "some-datasource-id",
          "parameters": Object {
            "cloudId": "DUMMY-158c8204-ff3b-47c2-adbb-a0906ccc722b",
            "jql": "project=EDM",
          },
          "views": Array [
            Object {
              "properties": Object {
                "columns": Array [
                  Object {
                    "key": "type",
                  },
                  Object {
                    "key": "summary",
                  },
                  Object {
                    "key": "assignee",
                  },
                ],
              },
              "type": "table",
            },
          ],
        },
        "layout": "wide",
        "url": null,
        "width": null,
      },
      "type": "blockCard",
    },
  ],
  "type": "doc",
}
`;
